Agregue el video

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                 </div>
             </div>
         </div>
+        
+        <div class="container borde">
+            <div class="row justify-content-md-center">
+                <div class="col-md-12">
+                    <video controls loop >
+                        <source src="media/VideoReloj.mp4" type="video/mp4">  
+                    </video>
+
+                </div>
+            
+            </div>
+        </div>
     </section>
 
     <footer id="footer">
